Scrapping the API website

--- a/Crawling data from next page.ipynb
+++ b/Crawling data from next page.ipynb
@@ -758,12 +758,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "35263e5e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://boston.craigslist.org/d/nonprofit/search/npo?s=120\n"
+     ]
+    }
+   ],
    "source": [
-    "import pandas as pd"
+    "from bs4 import BeautifulSoup\n",
+    "import requests \n",
+    "\n",
+    "\n",
+    "url = \"https://boston.craigslist.org/search/npo\"\n",
+    "\n",
+    "job_no = 0\n",
+    "while True:\n",
+    "    response = requests.get(url)\n",
+    "    data = response.text\n",
+    "    soup = BeautifulSoup(data,'html.parser')\n",
+    "    url_tag = soup.find('a',{'title':'next page'})\n",
+    "    if url_tag.get('href'):\n",
+    "        url= 'https://boston.craigslist.org' + url_tag.get('href')    \n",
+    "        print(url)\n",
+    "    else:\n",
+    "        break\n",
+    "        "
    ]
   },
   {
