--- a/Exporting the data from web into CSV file.ipynb
+++ b/Exporting the data from web into CSV file.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "6678b80b",
    "metadata": {},
    "outputs": [
@@ -11,8 +11,95 @@
      "output_type": "stream",
      "text": [
       "https://boston.craigslist.org/d/nonprofit/search/npo?s=120\n",
-      "Total Jobs: 141\n"
+      "Total Jobs: 143\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Job Title</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Link</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Retail Partnerships Manager</td>\n",
+       "      <td>Boston</td>\n",
+       "      <td>Jun 17</td>\n",
+       "      <td>https://boston.craigslist.org/gbs/npo/d/roxbur...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Community Health Worker – Kenmore Square</td>\n",
+       "      <td>Boston, MA</td>\n",
+       "      <td>Jun 17</td>\n",
+       "      <td>https://boston.craigslist.org/gbs/npo/d/boston...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Part-Time Dining Site Manager, $15.50/hour (6 ...</td>\n",
+       "      <td>Waltham, MA</td>\n",
+       "      <td>Jun 17</td>\n",
+       "      <td>https://boston.craigslist.org/gbs/npo/d/waltha...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Part-Time Floating Nutrition Assistant</td>\n",
+       "      <td>Waltham, MA</td>\n",
+       "      <td>Jun 17</td>\n",
+       "      <td>https://boston.craigslist.org/gbs/npo/d/waltha...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Part-Time Dining Site Assistant, $15/hour</td>\n",
+       "      <td>Waltham, MA</td>\n",
+       "      <td>Jun 17</td>\n",
+       "      <td>https://boston.craigslist.org/gbs/npo/d/waltha...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           Job Title     Location    Date  \\\n",
+       "1                        Retail Partnerships Manager       Boston  Jun 17   \n",
+       "2           Community Health Worker – Kenmore Square   Boston, MA  Jun 17   \n",
+       "3  Part-Time Dining Site Manager, $15.50/hour (6 ...  Waltham, MA  Jun 17   \n",
+       "4             Part-Time Floating Nutrition Assistant  Waltham, MA  Jun 17   \n",
+       "5          Part-Time Dining Site Assistant, $15/hour  Waltham, MA  Jun 17   \n",
+       "\n",
+       "                                                Link  \n",
+       "1  https://boston.craigslist.org/gbs/npo/d/roxbur...  \n",
+       "2  https://boston.craigslist.org/gbs/npo/d/boston...  \n",
+       "3  https://boston.craigslist.org/gbs/npo/d/waltha...  \n",
+       "4  https://boston.craigslist.org/gbs/npo/d/waltha...  \n",
+       "5  https://boston.craigslist.org/gbs/npo/d/waltha...  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -46,6 +133,7 @@
     "        npo_jobs[job_no] = [title, location, date, link]\n",
     "        \n",
     "        \n",
+    " \n",
     "    url_tag = soup.find('a',{'title':'next page'})\n",
     "    if url_tag.get('href'):\n",
     "        url= 'https://boston.craigslist.org' + url_tag.get('href')\n",
@@ -61,8 +149,16 @@
     "npo_jobs_df.head()\n",
     "\n",
     "# extract into CSV file\n",
-    "npo_jobs_df.to_csv('npo_jobs.csv')"
+    "#npo_jobs_df.to_csv('npo_jobs.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f683f740",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
