--- a/Selenium/ITviec.ipynb
+++ b/Selenium/ITviec.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "source": [
     "import selenium\r\n",
     "from selenium import webdriver\r\n",
@@ -1700,17 +1700,14 @@
     "    lst_company.append(company)\r\n",
     "    b=soup.findAll(\"div\",{\"class\":\"svg-icon__text\"})\r\n",
     "    if len(b)== 7:\r\n",
-    "        lst_company_origin.append(b[5].text)\r\n",
-    "        lst_company_type.append(b[2].text)\r\n",
-    "        lst_company_employee.append(b[3].text)\r\n",
+    "        lst_company_origin.append(b[6].text)\r\n",
+    "        lst_company_type.append(b[3].text)\r\n",
     "    elif len(b)==9:\r\n",
     "        lst_company_origin.append(b[7].text)\r\n",
     "        lst_company_type.append(b[4].text)\r\n",
-    "        lst_company_employee.append(b[5].text)\r\n",
     "    elif len(b)==8:\r\n",
     "        lst_company_origin.append(b[6].text)\r\n",
     "        lst_company_type.append(b[3].text)\r\n",
-    "        lst_company_employee.append(b[4].text)\r\n",
     "    a=soup.findAll(\"span\")\r\n",
     "    lst=tuple([a[i].text.strip() for i in range(3)])\r\n",
     "    lst_skill.append(lst)\r\n",
@@ -1721,35 +1718,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 72,
    "source": [
-    "lst=[]\r\n",
+    "lst_skill_new=[]\r\n",
     "address=[]\r\n",
-    "url=\"https://itviec.com/it-jobs/frontend-dev-reactjs-javascript-css-relyon-it-services-0942/content\"\r\n",
+    "lst=[]\r\n",
+    "url=\"https://itviec.com/it-jobs/mid-senior-fullstack-reactjs-nodejs-silentium-vietnam-0749/content\"\r\n",
+    "\r\n",
     "response = requests.get(url)\r\n",
     "data = response.text\r\n",
     "soup = bs(data,'html.parser')\r\n",
     "b=soup.findAll(\"div\",{\"class\":\"svg-icon__text\"})\r\n",
-    "print(len(b))\r\n",
-    "lst.append(b[4].text)\r\n",
-    "print(lst)\r\n",
+    "print(b)\r\n",
+    "address=[i.find(\"span\").text for i in b]\r\n",
+    "# for j in b:\r\n",
+    "    # b_sub= j.find(\"div\",{\"class\":\"svg-icon__text\"}).text\r\n",
+    "    # print(b_sub)\r\n",
+    "# lst\r\n",
+    "# \r\n",
+    "# a=soup.findAll(\"span\")\r\n",
+    "# print(len(a))\r\n",
+    "# print(a)\r\n",
+    "# lst_new=tuple([a[i].text.strip() for i in range(2)])\r\n",
+    "# lst_skill_new.append(lst_new)\r\n",
+    "# lst_skill_new\r\n",
+    "# \r\n",
+    "# a[4].text\r\n",
     "\r\n",
     "\r\n",
-    "# for j in lst:\r\n",
-    "    # address.append(tuple(j.strip())\r\n",
-    "# lst_new=[tuple(j.strip()) for j in lst]\r\n",
-    "# lst_new\r\n",
     "\r\n",
-    "\r\n",
-    "\r\n"
+    "    # url_tag=soup.find('a',{'rel':'next'})\r\n",
+    "    # if url_tag[\"href\"]: \r\n",
+    "        # url=\"https://itviec.com/\"+ url_tag[\"href\"]\r\n",
+    "        # print(url)\r\n",
+    "    # else:\r\n",
+    "        # break\r\n"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "9\n",
-      "['Outsourcing']\n"
+      "[<div class=\"svg-icon__text\">\n",
+      "<a class=\"ilink ilink--grey ilink--dotted ilink--direction\" href=\"/sign_in\" rel=\"nofollow\">Sign in to view\n",
+      "</a></div>, <div class=\"svg-icon__text\">\n",
+      "<span>President Place - 93 Nguyen Du , District 1, Ho Chi Minh</span>\n",
+      "<a class=\"job-details__address-map hidden-xs\" href=\"https://www.google.com/maps?q=President Place - 93 Nguyen Du , District 1, Ho Chi Minh\" target=\"_blank\"><div class=\"job-details__address-text\">See map</div>\n",
+      "<div class=\"job-details__address-arrow\"></div>\n",
+      "</a></div>, <div class=\"svg-icon__text\">\n",
+      "5 days ago\n",
+      "</div>, <div class=\"svg-icon__text\">Product</div>, <div class=\"svg-icon__text\">1-50</div>, <div class=\"svg-icon__text\">Monday - Friday</div>, <div class=\"svg-icon__text\">Vietnam</div>, <div class=\"svg-icon__text\">\n",
+      "No OT\n",
+      "</div>]\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'text'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-72-1adb98130b77>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msoup\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfindAll\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"div\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m\"class\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;34m\"svg-icon__text\"\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0maddress\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"span\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m \u001b[1;31m# for j in b:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[1;31m# b_sub= j.find(\"div\",{\"class\":\"svg-icon__text\"}).text\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-72-1adb98130b77>\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msoup\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfindAll\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"div\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m\"class\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;34m\"svg-icon__text\"\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0maddress\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"span\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m \u001b[1;31m# for j in b:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[1;31m# b_sub= j.find(\"div\",{\"class\":\"svg-icon__text\"}).text\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'text'"
      ]
     }
    ],
@@ -1757,7 +1789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 1,
    "source": [
     "database = {'Title_job': lst_title,\r\n",
     "            'Skills':lst_skill,\r\n",
@@ -1771,10 +1803,22 @@
     "df = df.transpose()\r\n",
     "\r\n",
     "\r\n",
-    "df.to_csv('IT_job_Database.csv',encoding='utf-8-sig')\r\n",
-    "# df.tail(17)"
+    "#df.to_csv('IT_job_Database.csv',encoding='utf-8-sig')\r\n",
+    "df.head(17)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'lst_title' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-dbdf4c78e84b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m database = {'Title_job': lst_title,\n\u001b[0m\u001b[0;32m      2\u001b[0m             \u001b[1;34m'Skills'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mlst_skill\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m             \u001b[1;34m'Company'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mlst_company\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m             \u001b[1;34m'Type_of_company'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mlst_company_type\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m             \u001b[1;34m'Address'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mlst_company_adress\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'lst_title' is not defined"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
